# wordifyapi

./: .replit  output.txt  pyproject.toml  requirements.txt  server.py  wsgi.py
app/: dbload.py  main.py  wordify.json
app/templates/: index.html
templates/: index.html
